2006-04-02  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* Makefile: Use gtk-sharp gnome-sharp and glade-sharp in 2.0 verions.

2005-11-13  Zoltan Varga  <vargaz@gmail.com>

	* Makefile gui/gtk/MonoCov.cs: Update to latest mono.

2005-07-21  Zoltan Varga  <vargaz@freemail.hu>

	* LICENSE: Change license to the class libs license.

2005-03-29  Zoltan Varga  <vargaz@freemail.hu>

	* gui/gtk/*.cs: Applied patch from Rafael Teixeira <monoman@gmail.com>.
	Fix compilation problems on HEAD.

	* symbols.cs: Update to latest Mono.CompilerServices.SymbolWriter.

	* Makefile: Disable building of nunit-console.exe for now.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* coverage.c *.cs Makefile: Applied patch from Mike Tindal (mtindal@paradoxpoint.com). Fix compilation problems on HEAD.

2004-05-13  Zoltan Varga  <vargaz@freemail.hu>

	* CoverageModel.cs: Invoke GetGuid dynamically since it is no longer
	public.

2004-04-15  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	*: README - nowadays it's mono --profile=xxx and not --profile:xxx

2004-04-15  Zoltan Varga  <vargaz@freemail.hu>

	*: Update to latest mono + gtk#.

2003-10-17  Zoltan Varga  <vargaz@freemail.hu>

	* nunit-console.cs: Update to latest nunit.

2003-07-05  Zoltan Varga  <vargaz@freemail.hu>

	* style.xsl: Made the output valid HTML 4.0 Transitional.

2003-07-03  Zoltan Varga  <vargaz@freemail.hu>

	* coverage.c (mono_profiler_startup): Fix startup if no arguments
	are provided.

2003-07-02  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile: Updated to work in the mono CVS directory structure.

	* MonoCovMain.cs gui/gtk/MonoCov.cs gui/qt/MonoCov.cs: Moved all
	non-gui command line processing into a separate class.

	* all: Initial import into CVS.

2003-07-01  Zoltan Varga  <vargaz@freemail.hu>

	* HtmlExporter.cs: Implemented HTML exporter.

	* style.xsl: Small modifications needed by the HTML export method.

2003-06-07  Zoltan Varga  <vargaz@freemail.hu>

	* New version with many enchantments.
