@@ -1,4 +1,3 @@
-
 using System;
 using System.Collections;
 using System.Xml;
@@ -6,13 +5,16 @@ using System.IO;
 using System.Reflection;
 using Mono.CompilerServices.SymbolWriter;
 
-public class SymbolDumper {
+public class SymbolDumper
+{
 
-	public static void Main (String[] args) {
+	public static void Main (String[] args)
+	{
 		if (args.Length != 2) {
-			Console.WriteLine ("USAGE: symbols <ASSEMBLY> <NETHOD NAME PATTERN>");
+			Console.WriteLine ("USAGE: symbols <ASSEMBLY> <METHOD NAME PATTERN>");
 			Environment.Exit (1);
 		}
+
 		string assemblyName = args [0];
 		string methodNamePattern = args [1];
 
@@ -20,25 +22,29 @@ public class SymbolDumper {
 
 		Console.WriteLine ("Reading symbols for " + assembly + " ...");
 		MonoSymbolFile symbolFile = MonoSymbolFile.ReadSymbolFile (assembly);
+
 		if (symbolFile == null)
 			Console.WriteLine ("WARNING: No symbols found for " + assembly);
-		else {
+		else
 			Console.WriteLine ("Loaded symbol info for " + symbolFile.SourceCount + " source files and " + symbolFile.MethodCount + " methods.");
-		}
 
-		for (int i = 0; i < symbolFile.MethodCount; ++i) {
-			MethodEntry entry = symbolFile.GetMethod (i + 1);
+		Module[] modules = assembly.GetModules();
 
-			LineNumberEntry[] lines = entry.LineNumbers;
+		if (modules.Length > 1)
+			Console.WriteLine("WARNING: Assembly had more than one module. Using the first.");
 
-			MethodBase mi = MonoDebuggerSupport.GetMethod (assembly, entry.Token);
+		Module module = modules[0];
 
-			if (mi.Name.IndexOf (methodNamePattern) != -1) {
-				Console.WriteLine (mi.DeclaringType.FullName + ":" + mi.Name + " " + entry);
+		foreach (MethodEntry entry in symbolFile.Methods) {
+		
+			MethodBase methodBase = module.ResolveMethod(entry.Token);
+				
+			if (methodBase.Name.IndexOf (methodNamePattern) != -1) {
+				Console.WriteLine (methodBase.DeclaringType.FullName + ":" + methodBase.Name + " " + entry);
 
-				foreach (LineNumberEntry line in lines)
+				foreach (LineNumberEntry line in entry.LineNumbers)
 					Console.WriteLine ("\t" + line);
-			}
+			}					
+		}
 	}
-}
 }
